
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int sbuf ;
typedef int rbuf ;
typedef int cif ;


 int AF_INET ;
 int IDENTD_PORT ;
 int INADDR_ANY ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int*) ;
 int bind (int,struct sockaddr*,int) ;
 int bzero (int *,int) ;
 int exit (int) ;
 int fork () ;
 int htons (int ) ;
 int l33t_buf () ;
 int listen (int,int) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 int printf (char*) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,int,int,char*) ;
 int sscanf (char*,char*,int*) ;
 int strlen (char*) ;
 char* zbuf ;

void
fake_identd(void)
{
  int sockfd, new_fd, sin_size, rem_port, loc_port, i;
  char rbuf[1024], sbuf[1024], cif[6], *ptr;
  struct sockaddr_in my_addr;
  struct sockaddr_in their_addr;

  printf("  fake_identd forking into background\n");
  if (!fork())
    {
        if((sockfd = socket(AF_INET, SOCK_STREAM, 0)) == -1)
          {
            perror("socket()");
            exit(1);
          }

        my_addr.sin_family = AF_INET;
        my_addr.sin_port = htons(IDENTD_PORT);
        my_addr.sin_addr.s_addr = INADDR_ANY;
        bzero(&(my_addr.sin_zero), 8);

        if(bind(sockfd, (struct sockaddr *)&my_addr,
        sizeof(struct sockaddr)) == -1)
          {
            perror("bind()");
            exit(1);
          }

        if(listen(sockfd, 1) == -1)
          {
            perror("listen()");
            exit(1);
          }

        while(1)
          {
            sin_size = sizeof(struct sockaddr_in);
            if((new_fd = accept(sockfd, (struct sockaddr *)&their_addr,
            &sin_size)) == -1)
              {
                perror("accept()");
                continue;
              }



            memset(rbuf, 0, sizeof(rbuf));
            recv(new_fd, rbuf, sizeof(rbuf), 0);



            ptr = rbuf; i = 0;
            while(*ptr != ',')
              {
                cif[i] = *ptr;
                *ptr++; i ++;
              }
            sscanf(cif, "%d", &rem_port);
            memset(cif, 0, sizeof(cif));
            *ptr++; i = 0;
            while(*ptr != ' ')
              {
                cif[i] = *ptr;
                *ptr++; i++;
              }
            sscanf(cif, "%d", &loc_port);

            l33t_buf();

            memset(sbuf, 0, sizeof(sbuf));
            sprintf(sbuf, "%d,%d:USERID:%s\r\n",
            rem_port, loc_port, zbuf);
            send(new_fd, sbuf, strlen(sbuf), 0);

            memset(rbuf, 0, sizeof(rbuf));
            recv(new_fd, rbuf, sizeof(rbuf), 0);



          }
    }
  return;
}
